Update timings